--- a/styles/about.css
+++ b/styles/about.css
@@ -18,7 +18,8 @@
     left: 0;
     background: var(--about-background);
 
-   
+    opacity: 0;
+    transform: translateX(100%);
     transition: 0s all;
 
     overflow: auto;
@@ -136,7 +137,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    margin: auto 0;
+    margin-top: auto;
     color: var(--based-color);
 }
 section.about-info ul {
